<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	style="@style/main_layout"
	tools:context=".MainActivity">
	<TextView
		style="@style/main_title_text"
		android:text="@string/app_name"
	/>
	<LinearLayout
		android:id="@+id/numbers"
		style="@style/subject_group">
		<TextView
			style="@style/to_right_arrow"
		/>
		<TextView
			style="@style/main_subject_text"
			android:text="@string/numbers"
		/>
		<TextView
			style="@style/to_left_arrow"
		/>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/family"
		style="@style/subject_group">
		<TextView
			style="@style/to_right_arrow"
		/>
		<TextView
			style="@style/main_subject_text"
			android:text="@string/family"
			android:textSize="35sp"
		/>
		<TextView
			style="@style/to_left_arrow"
		/>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/colors"
		style="@style/subject_group">
		<TextView
			style="@style/to_right_arrow"
		/>
		<TextView
			style="@style/main_subject_text"
			android:text="@string/colors"
		/>
		<TextView
			style="@style/to_left_arrow"
		/>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/phrases"
		style="@style/subject_group">
		<TextView
			style="@style/to_right_arrow"
		/>
		<TextView
			style="@style/main_subject_text"
			android:text="@string/phrases"
		/>
		<TextView
			style="@style/to_left_arrow"
		/>
	</LinearLayout>
</LinearLayout>